--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,6 +1,6 @@
 aws_access_key = ""
 aws_secret_key = ""
-aws_key_path = ""
-aws_key_name = ""
-region = ""
-network = ""
+aws_key_path = "~/.ssh/bosh-us-east-1.pem"
+aws_key_name = "bosh"
+aws_region = "us-east-1"
+network = "10.10"
