--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,5 +1,5 @@
-aws_access_key = ""
-aws_secret_key = ""
+aws_access_key = "XXXXXXXXXXXXXXX"
+aws_secret_key = "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
 aws_key_path = "~/.ssh/bosh-us-east-1.pem"
 aws_key_name = "bosh"
 aws_region = "us-east-1"
