--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: c
 before_install:
   - wget https://dl.bintray.com/mitchellh/terraform/terraform_0.3.6_linux_amd64.zip -O /tmp/terraform.zip
-  - unzip /tmp/terraform.zip
-  - sudo mv /tmp/terraform /usr/local/bin
+  - sudo unzip -d /usr/local/bin/ /tmp/terraform.zip
 script: make test
