Updated test plan for newer ports

--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -2,4 +2,4 @@ aws_access_key = "XXXXXXXXXXXXXXX"
 aws_secret_key = "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
 aws_key_path = "~/.ssh/bosh-us-east-1.pem"
 aws_key_name = "bosh"
-aws_region = "us-east-1"
+aws_region = "us-west-2"
